# llm_rag

./: benchmark_retriever.py  data_prep.py  main.py  pyproject.toml  rag.py  requirements.txt  split_docs.pkl  test_prompt.py  test_vector.py  visualize_chunks.py
data/processed_markdown/: AI_Intro.md  Search.md  adversarialsearch.md  informed_search.md  intelligentagents.md  localsearch.md  markov.md  ml.md  naivebayes.md  rl.md
faiss_index/: index.pkl
